<resources>
    <string name="app_name">bharti-AXA</string>
    <string name="cloud_url">https://axaapp.firebaseio.com/</string>
    <string name="title">Financial asset management system</string>
    <string name="login">Login</string>
    <string name="gender">Gender</string>
    <string name="male">M</string>
    <string name="female">F</string>
    <string name="age">AGE(yrs)</string>
    <string name="input">Input</string>
    <string name="limited">Limited</string>
    <string name="regular">Regular</string>
    <string name="endowment">Endow</string>
    <string name="money_back">M.B</string>
    <string name="pay_type">Pay type</string>
    <string name="benefit_type">Benefit type</string>
    <string name="policy_term">Policy term (yrs)</string>
    <string name="premium_type_term">Premium payment term (yrs)</string>
    <string name="annual_premium">Annual premium (yrs)</string>
    <string name="annual_premium_rupee">Annual premium (Rs)</string>
    <string name="benefit">Benefit</string>
    <string name="guaranteed">Guaranteed benefit at maturity</string>
    <string name="non_guaranteed">Non guaranteed benefit at maturity</string>
    <string name="total_benefit">Total Maturity benefit</string>
    <string name="premium_payable">Premium payable</string>
    <string name="annual_premium_text">Annual premium</string>
    <string name="semi_annual_premium">Semi manual premium</string>
    <string name="monthly_premium">Monthly premium</string>
    <string name="guaranteed_payout_pa">Guaranteed payout PA</string>
    <string name="total_guaranteed_pa">Total guaranteed payout</string>
    <string name="sum_assured">Sum assured</string>
    <string name="benefits_upto_age">Benefits upto age (yrs)</string>
    <string name="sixth">End of 6th year</string>
    <string name="seventh">End of 7th year</string>
    <string name="eighth">End of 8th year</string>
    <string name="ninth">End of 9th year</string>
    <string name="tenth">End of 10th year</string>
    <string name="mature_benefit">At maturity</string>
    <string name="total_guaranteed_benefit">Total guaranteed benefit</string>
    <string name="total_maturity_benefit">Total maturity benefit</string>
    <string name="flexi_benefit_period">Flexi benefit period</string>
    <string name="flexi_bonus_at_maturity">Total bonus at maturity</string>
    <string name="flexi_total_benefit">Total benefit</string>
    <string name="total_premium_paid">Total premium paid</string>
    <string name="child_future_plan">Child\'s future plan</string>
    <string name="wealth_calculator">Wealth calculator</string>
    <string name="retirement_calculator">Retirement calculator</string>
    <string name="current_cost">Current coast</string>
    <string name="current_age">Current age (yrs)</string>
    <string name="funds_reqd_at_age">Funds reqd at the age</string>
    <string name="rate_of_inflation">Rate of inflation(%)</string>
    <string name="rate_of_return">Rate of return(%)</string>
    <string name="coast_of_schooling">Coast of doing schooling in 0 years</string>
    <string name="to_achieve_this_goal">To achieve this goal,you need to invest</string>
    <string-array name="select_goal">
        <item>Select goal</item>
        <item>Basic education</item>
        <item>Graduation with specialisation</item>
        <item>Post graduation</item>
    </string-array>
    <string-array name="select_sub_gall">
        <item>Select sub gall</item>
        <item>Schooling</item>
    </string-array>
    <string-array name="select_purpose">
        <item>Select purpose</item>
        <item>Marriage</item>
        <item>Buying new home</item>
        <item>Child\'s education</item>
        <item>Child\'s marriage</item>
        <item>Business expansion</item>
        <item>Repayment of loan</item>
        <item>Vacation abroad</item>
        <item>Others</item>
    </string-array>
    <string name="funds_required_for">Funds required for</string>
    <string name="savings">Savings</string>
    <string name="savings_till_date">Savings till date</string>
    <string name="rate_of_interest">Rate of interest(%)</string>
    <string name="total_savings_at_retirement">Total savings at retirement</string>
    <string-array name="navigation_items_employee">
        <item>Product Calculator</item>//product illstration
        <item>Chat</item>
        <item>Customer Prospects</item>//Customer survey and appointment callback
        <item>Subscriptions</item>//Customer insurence details
        <item>Contact Us</item>//map
        <item>Logout</item>
    </string-array>
    <string-array name="navigation_items_agent">
        <item>Product Calculator</item>
        <item>Contact Us</item>
        <item>Logout</item>
    </string-array>
    <string-array name="navigation_items_customer">
        <item>Product Details</item>//appoiment callback
        <item>Trending Analysis</item>//pi chart
        <item>Renewal</item>//insurence renewel
        <item>Survey</item>//survey form mandatory
        <item>Fix Appointment</item>
        <item>Contact Us</item>//tollfree ,sms,email
        <item>Check In</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="occupation">Occupation</string>
    <string name="annual_income">Annual income</string>
    <string name="submit">Submit</string>
    <string-array name="data_title">
        <item>Bharti AXA Life Aajeevan Sampatti+(UIN: 130N058V01)</item>
        <item>Bharti AXA Life Aajeevan Saridhi(UIN 130N061V01)</item>
        <item>Bharti AXA Life Elite Advantage(UIN 130N060V01)</item>
        <item>Bharti AXA Life Triple Health Insurance(UIN 130N047V02)</item>
        <item>Bharti AXA Life Flexi Save(UIN 130N055V02)</item>
        <item>Bharti AXA Life Monthy Income Plan(UIN 130N057V01)</item>
        <item>Bharti AXA Life Super Series Plan(UIN 130N066V01)</item>
    </string-array>
    <string name="data_aajeevan_sampathi_plus_title">Bharti AXA Life Aajeevan Sampatti+(UIN: 130N058V01)</string>
    <string name="data_aajeevan_sampathi_plus_sub_title">A savings plan that offers dual benefits of guaranteed annual pay-outs with life cover up to age 100. You can also enjoy additional(non-guaranteed) cash bonuses till Maturity.</string>
    <string name="data_aajeevan_sampathi_plus">1)When you need a whole life cover up to age 100. You can choose a policy term that will protect you until the age of 85 or 100\n2)Receive annual guaranteed benefit from end of 10th policy year till Maturity. The percentage of the guaranteed annual pay-out depends on the policy term you have chosen; it is 5.5\%% of Sum Assured on maturity when you chose to protect yourself until the age of 100and 6\%% of Sum Assured on maturitywhen you chose to protect yourself until the age of 85\n3)Potential of upside bonus from end of 6th policy year. This non-guaranteed benefit (as percentage of Sum Assured on Maturity) is paid out as a cash bonus every year starting from the 6th Policy year, until maturity or death, whichever is earlier. You can also enjoy a discount on the premiums if you opt for a Sum Assured of Rs. 4,00,000 and above\n4)Enjoy Tax benefits on the premiums paid and pay-out benefits received.The Tax benefits fall under Section 80C and Section 10 (10D) respectively, of the Income Tax Act, 1961. They are subject to change as per change in tax laws from time to time.</string>
    <string-array name="data_subtitle">
        <item>A traditional participating savings plan with an in-built Premium waiver benefit that offers you the flexibility to choose between 2 Maturity benefits – Money back and Endowment – depending on the needs and career goals of your child. </item>
        <item>A savings plan that offers dual benefits of guaranteed annual pay-outs with life cover up to age 100. You can also enjoy additional(non-guaranteed) cash bonuses till Maturity.</item>
        <item>A comprehensive savings plan with dual benefits of guaranteed pay-outs# of 8.5\%% to 9.5\%% from the end of your Policy Term and 100\%% Sum Assured at Maturity</item>
        <item>A health insurance plan where you can make up to three Claims for unrelated critical illnesses. After making the first Claim, all your future premiums are waived off and paid by us.</item>
        <item>A savings plan that helps you save towards meeting your goals, at the same time it gives you the flexibility of withdrawing your savings with all the benefits accrued, anytime during the Flexi benefit period.</item>
        <item>A savings plan that offers you guaranteed monthly income with the upside of non-guaranteed bonuses, along with protection for your family in case of an unfortunate event.</item>
        <item>A plan that offers a lump sum payout at the end of the premium payment term followed by increasing guaranteed payouts until Maturity and a lump sum payout at Maturity.</item>
    </string-array>
</resources>