<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:background="@color/black"
        android:id="@+id/tvFourReason"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/data_aajeevan_sampathi_plus_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/gold" />

        <TextView
            android:id="@+id/tvSubtiltle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvHeader"
            android:layout_centerHorizontal="true"
            android:padding="10dp"
            android:text="@string/data_aajeevan_sampathi_plus_sub_title"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/grey_text_color" />

        <TextView
            android:id="@+id/textView42"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvSubtiltle"
            android:layout_centerHorizontal="true"
            android:padding="10dp"
            android:text="@string/data_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/gold" />

        <TextView
            android:id="@+id/tvDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView42"
            android:layout_centerHorizontal="true"
            android:lineSpacingExtra="3dp"
            android:padding="10dp"
            android:text="@string/data_aajeevan_sampathi_plus"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/grey_text_color" />
    </RelativeLayout>
</ScrollView>